# InstaRAG

./: .gitignore  README.md  pyproject.toml  test.yml
instarag/: __init__.py  app.py  helpers.py  ui_builder.py  utils.py
instarag/api/: __init__.py  constants.py  router.py  utils.py
instarag/api/web/: routes.py
instarag/api/web/templates/: welcome.html
instarag/config_parser/: __init__.py  data_models.py  error.py
src/instarag/: constants.py  main.py  utils.py
src/instarag/api/: router.py  utils.py
src/instarag/api/web/static/: style.css
src/instarag/config_parser/: __init__.py  data_models.py
