[project]
name = "InstaRAG"
version = "0.1.0"
description = ""
authors = [
    { name = "Subhomoy Roy Choudhury", email = "subhomoyrchoudhury@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.11,<4.0.0"
dependencies = [
    "pydantic==2.10.1",
    "pyyaml>=6.0.2,<7.0.0",
    "pypdf>=5.1.0,<6.0.0",
    "rich>=13.9.4,<14.0.0",
    "fastapi>=0.115.8,<0.116.0",
    "uvicorn>=0.34.0,<0.35.0",
    "requests>=2.32.5",
    "jinja2>=3.1.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/instarag"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
